# CDP

./: .gitattributes  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
docs/superpowers/plans/: 2026-04-17-cdp-terminal-tool.md
docs/superpowers/specs/: 2026-04-17-cdp-terminal-tool-design.md
shell/: cdp.zsh
src/cdp/: __main__.py  cli.py  combine.py  config.py  constants.py  picker.py  projects.py
tests/: conftest.py  test_cli.py  test_combine.py  test_config.py  test_picker.py  test_projects.py
