[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cdp"
version = "0.1.0"
description = "Terminal picker for recent Claude Code projects"
requires-python = ">=3.10"
dependencies = [
    "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
